se ajusta sección heder

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </nav>
         </div>
     </header>
-    <section class="hero">
+    <!-- <section class="hero">
         <div class="container">
             <h1>
                 ¡Hola! soy <strong>Joe Mancera</strong>  <br/>Desarrollador Web <br>Casi <strong>unicornio</strong> tech...<br/> Un unicornio en formación
@@ -148,6 +148,6 @@
             <div>Gracias a <img width="80px" src="images/platzi.png" alt="platzi"> </div>
             <div>Desinged by <a href="https://instagram.com/joeharrym">@joeharrym</a></div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 </html>
