Ajusto sección de portafolio RD

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </h1>
             <img class="hero-image" src="images/hero.jpg" alt="Imagen de portada" width="500" height="300" />
         </div>
-    </section>
-    <section class="my-self">
+    </section> -->
+    <!-- <section class="my-self">
         <div class="container">
             <h2>¿Quién soy?</h2>
             <article class="my-selfDescription">
@@ -50,7 +50,7 @@
                 </p>
             </article>
         </div>
-    </section>
+    </section> -->
     <section id="portafolio" class="portfolio">
         <div class="container">
             <h2>Portafolio (Proyectos Destacados)</h2>
@@ -85,7 +85,7 @@
             </article>
         </div>
     </section>
-    <section id="habilidades" class="skill-list">
+    <!-- <section id="habilidades" class="skill-list">
         <div class="container">
             <h2 class="skills-title">Mis Skills</h2>
             <div class="skills">
@@ -127,8 +127,8 @@
                 </article>
             </div>        
         </div>
-    </section>
-    <section id="contacto" class="contact">
+    </section> -->
+    <!-- <section id="contacto" class="contact">
         <div class="container">
             <form class="form-email" action="">
                 <h3>¿Creamos algo juntos?</h3>
@@ -142,8 +142,8 @@
                 <a href="#" class="social-link instagram"></a>
             </div>
         </div>
-    </section>
-    <footer class="footer">
+    </section> -->
+    <!-- <footer class="footer">
         <div class="container">
             <div>Gracias a <img width="80px" src="images/platzi.png" alt="platzi"> </div>
             <div>Desinged by <a href="https://instagram.com/joeharrym">@joeharrym</a></div>
