Se agregó RD a sección de habilidades

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </article>
         </div>
     </section>
-    <!-- <section id="habilidades" class="skill-list">
+    <section id="habilidades" class="skill-list">
         <div class="container">
             <h2 class="skills-title">Mis Skills</h2>
             <div class="skills">
@@ -127,7 +127,7 @@
                 </article>
             </div>        
         </div>
-    </section> -->
+    </section>
     <!-- <section id="contacto" class="contact">
         <div class="container">
             <form class="form-email" action="">
