se agrega RD a la sección contacto y footer

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>        
         </div>
     </section>
-    <!-- <section id="contacto" class="contact">
+    <section id="contacto" class="contact">
         <div class="container">
             <form class="form-email" action="">
                 <h3>¿Creamos algo juntos?</h3>
@@ -142,12 +142,12 @@
                 <a href="#" class="social-link instagram"></a>
             </div>
         </div>
-    </section> -->
-    <!-- <footer class="footer">
+    </section>
+    <footer class="footer">
         <div class="container">
             <div>Gracias a <img width="80px" src="images/platzi.png" alt="platzi"> </div>
             <div>Desinged by <a href="https://instagram.com/joeharrym">@joeharrym</a></div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
