--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
             </nav>
         </div>
     </header>
-    <!-- <section class="hero">
+    <section class="hero">
         <div class="container">
             <h1>
                 ¡Hola! soy <strong>Joe Mancera</strong>  <br/>Desarrollador Web <br>Casi <strong>unicornio</strong> tech...<br/> Un unicornio en formación
             </h1>
             <img class="hero-image" src="images/hero.jpg" alt="Imagen de portada" width="500" height="300" />
         </div>
-    </section> -->
-    <!-- <section class="my-self">
+    </section>
+    <section class="my-self">
         <div class="container">
             <h2>¿Quién soy?</h2>
             <article class="my-selfDescription">
@@ -50,7 +50,7 @@
                 </p>
             </article>
         </div>
-    </section> -->
+    </section>
     <section id="portafolio" class="portfolio">
         <div class="container">
             <h2>Portafolio (Proyectos Destacados)</h2>
