optimización de fuente  y estilos

--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
             <div>Desinged by <a href="https://instagram.com/joeharrym">@joeharrym</a></div>
         </div>
     </footer>
-    <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/icons.css">
+    <link async href="https://fonts.googleapis.com/css?family=Allerta+Stencil" rel="stylesheet">
+    <link async href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link async rel="stylesheet" href="css/estilos.css">
+    <link async rel="stylesheet" href="css/icons.css">
     <script>
         const menu = document.querySelector('.menu');
         const burger = document.querySelector('#burger-menu');
