compresión del estilos.css

--- a/index.html
+++ b/index.html
@@ -147,9 +147,7 @@
             <div>Desinged by <a href="https://instagram.com/joeharrym">@joeharrym</a></div>
         </div>
     </footer>
-    <link async href="https://fonts.googleapis.com/css?family=Allerta+Stencil" rel="stylesheet">
-    <link async href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link async rel="stylesheet" href="css/estilos.css">
+    <link async rel="stylesheet" href="css/estilos.min.css">
     <link async rel="stylesheet" href="css/icons.css">
     <script>
         const menu = document.querySelector('.menu');
@@ -181,5 +179,7 @@
         }
         
     </script>
+    <link async href="https://fonts.googleapis.com/css?family=Allerta+Stencil" rel="stylesheet">
+    <link async href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </body>
 </html>
