cambio de imaen hero y guardo originales

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1>
                 ¡Hola! soy <strong>Joe Mancera</strong>  <br/>Desarrollador Web <br>Casi <strong>unicornio</strong> tech...<br/> Un unicornio en formación
             </h1>
-            <img class="hero-image" src="images/hero.jpg" alt="Imagen de portada" width="500" height="300" />
+            <img class="hero-image" src="images/hero.png" alt="Imagen de portada" width="500" height="300" />
         </div>
     </section>
     <section class="my-self">
