--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="skills">
                 <article class="skill">
                     <figure class="skill-image-container">
-                        <img class="skill-image" src="images/desarrollo-web.jpg" title="Photo by Joshua Aragon on Unsplash" alt="Img Skill 1" width="500" />
+                        <img class="skill-image" src="images/desarrollo-web.png" title="Photo by Joshua Aragon on Unsplash" alt="Img Skill 1" width="500" />
                     </figure>
                     <div class="skill-detail">
                         <h3 class="skill-title">Desarrollo Web</h3>
@@ -104,7 +104,7 @@
                 </article>
                 <article class="skill">
                     <figure class="skill-image-container">
-                        <img class="skill-image" src="images/git-github.jpg" title="Photo by Jacob Miller on Unsplash" alt="Img Skill 1" width="500" />
+                        <img class="skill-image" src="images/git-github.png" title="Photo by Jacob Miller on Unsplash" alt="Img Skill 1" width="500" />
                     </figure>
                     <div class="skill-detail">
                         <h3 class="skill-title">Git y GitHub</h3>
@@ -116,7 +116,7 @@
                 </article>
                 <article class="skill">
                     <figure class="skill-image-container">
-                        <img class="skill-image" src="images/amateur.jpg" alt="Img Skill 1" width="500" />
+                        <img class="skill-image" src="images/amateur.png" alt="Img Skill 1" width="500" />
                     </figure>
                     <div class="skill-detail">
                         <h3 class="skill-title">Fotografía Amateur</h3>
