--- a/index.html
+++ b/index.html
@@ -104,6 +104,18 @@
                 </article>
                 <article class="skill">
                     <figure class="skill-image-container">
+                        <img class="skill-image" src="images/desarrollo-web.png" title="Photo by Joshua Aragon on Unsplash" alt="Img Skill 1" width="500" />
+                    </figure>
+                    <div class="skill-detail">
+                        <h3 class="skill-title">Optimización de Carga de Sitios Web</h3>
+                        <p class="skill-description">
+                            En esta era móvil y de conexiones hay que tener en cuenta la carga de los sitios. No siempre tenemos la misma velociad, por eso este curso es un bonus para mis habilidades.
+                        </p>
+                        <a target="_blank" class="skill-url" href="#">Ver Certificado</a>
+                    </div>
+                </article>
+                <article class="skill">
+                    <figure class="skill-image-container">
                         <img class="skill-image" src="images/git-github.png" title="Photo by Jacob Miller on Unsplash" alt="Img Skill 1" width="500" />
                     </figure>
                     <div class="skill-detail">
