--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <h1>
                 ¡Hola! soy <strong>Joe Mancera</strong>  <br/>Desarrollador Web <br>Casi <strong>unicornio</strong> tech...<br/> Un unicornio en formación
             </h1>
-            <img class="hero-image" src="images/hero.png" srcset="images/hero.png, org-img/hero.jpg 2x" alt="Imagen de portada" width="500" height="300" />
+            <img class="hero-image" src="images/hero.png" alt="Imagen de portada" width="500" height="300" />
+            <!-- <img class="hero-image" src="images/hero.png" srcset="images/hero.png, org-img/hero.jpg 2x" alt="Imagen de portada" width="500" height="300" /> -->
         </div>
     </section>
     <section class="my-self">
@@ -104,7 +105,7 @@
                 </article>
                 <article class="skill">
                     <figure class="skill-image-container">
-                        <img class="skill-image" src="images/desarrollo-web.png" title="Photo by Joshua Aragon on Unsplash" alt="Img Skill 1" width="500" />
+                        <img class="skill-image" src="images/wop.png" title="Photo by Erik Odiin on Unsplash" alt="Img Skill 1" width="500" />
                     </figure>
                     <div class="skill-detail">
                         <h3 class="skill-title">Optimización de Carga de Sitios Web</h3>
