change title WPO

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <img class="skill-image" src="images/wop.png" title="Photo by Erik Odiin on Unsplash" alt="Img Skill 1" width="500" />
                     </figure>
                     <div class="skill-detail">
-                        <h3 class="skill-title">Optimización de Carga de Sitios Web</h3>
+                        <h3 class="skill-title">Optimización de Carga de WebSites</h3>
                         <p class="skill-description">
                             En esta era móvil y de conexiones hay que tener en cuenta la carga de los sitios. No siempre tenemos la misma velociad, por eso este curso es un bonus para mis habilidades.
                         </p>
