Add Quien soy menu option

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <nav class="menu">
                 <ol>
                     <li>
+                        <a class="link" href="#quien-soy">¿Quién Soy?</a>
+                    </li>
+                    <li>
                         <a class="link" href="#portafolio">Portafolio</a>
                     </li>
                     <li>
@@ -41,7 +44,7 @@
             <!-- <img class="hero-image" src="images/hero.png" srcset="images/hero.png, org-img/hero.jpg 2x" alt="Imagen de portada" width="500" height="300" /> -->
         </div>
     </section>
-    <section class="my-self">
+    <section id="quien-soy" class="my-self">
         <div class="container">
             <h2>¿Quién soy?</h2>
             <article class="my-selfDescription">
