--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </section>
     <footer class="footer">
         <div class="container">
-            <div>Gracias a <a href="https://platzi.com"><img width="80px" src="images/platzi.png" alt="platzi"></a> </div>
+            <div>Gracias a <a target="_blank" href="https://platzi.com"><img width="80px" src="images/platzi.png" alt="platzi"></a> </div>
             <div>Desinged by <a href="https://instagram.com/joeharrym">@joeharrym</a></div>
         </div>
     </footer>
