--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <footer class="footer">
         <div class="container">
             <div>Gracias a <a target="_blank" href="https://platzi.com"><img width="80px" src="images/platzi.png" alt="platzi"></a> </div>
-            <div>Desinged by <a href="https://instagram.com/joeharrym">@joeharrym</a></div>
+            <div>Desinged by <a target="_blank" href="https://instagram.com/joeharrym">@joeharrym</a></div>
         </div>
     </footer>
     <link async rel="stylesheet" href="css/estilos.min.css">
