--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <p class="skill-description">
                             En esta era gobernada por código y tecnología es imposible manejar proyectos sin una exelente herramienta como Git y GitHub para compartirlo.
                         </p>
-                        <a class="skill-url" href="https://platzi.com/@joemancera/curso/1390-optimizacion-web/diploma/detalle/">Ver Certificado</a>
+                        <a target="_blank" class="skill-url" href="https://platzi.com/@joemancera/curso/1390-optimizacion-web/diploma/detalle/">Ver Certificado</a>
                     </div>
                 </article>
                 <article class="skill">
