Add link social media

--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
                 <button>Enviar</button>
             </form>
             <div class="social">
-                <a href="#" class="social-link twitter"></a>
+                <a href="https://twitter.com/JoeHarrym" class="social-link twitter"></a>
                 <a href="#" class="social-link facebook"></a>
-                <a href="#" class="social-link github"></a>
-                <a href="#" class="social-link instagram"></a>
+                <a href="https://github.com/JoeMancera" class="social-link github"></a>
+                <a href="https://www.instagram.com/joeharrym/" class="social-link instagram"></a>
             </div>
         </div>
     </section>
