cambio en header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <span class="icon-menu burger-button" id=burger-menu></span>
     <header class="header">
-        <div class="container">
+        <div class="container" id="head">
             <figure class="logo">
                 <img height="50px" src="images/logo.png" alt="Logo JoeMancera" />
             </figure>
