--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="¡Hola! soy Joe Mancera Desarrollador Web Casi unicornio tech... Un unicornio en formación"/>
+    <meta name="keywords" content="Joe Mancera, joe mancera, Joe Harry Mancera, joe harry mancera, desarrollador web"/>
+    <meta name="author" content="Joe Mancera" />
+    <meta name="copyright" content="Joe Mancera" />
     <title>Joe Mancera</title>
     <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
