modifico el título

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Joe Mancera, joe mancera, Joe Harry Mancera, joe harry mancera, desarrollador web"/>
     <meta name="author" content="Joe Mancera" />
     <meta name="copyright" content="Joe Mancera" />
-    <title>Joe Mancera</title>
+    <title>Joe Mancera | Desarrollador Web</title>
     <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <style>
