ambio años por año de inicio

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2>¿Quién soy?</h2>
             <article class="my-selfDescription">
                 <p>
-                    En gran parte, he sido desarrollador. Empecé hace unos 4 años trabajando en una pequeña empresa de software lo cual me ayudó a prepararme para grandes retos. Ahora trabajo en una gran consultora. <br><br>
+                    En gran parte, he sido desarrollador. Empecé en el año de 2015 trabajando en una pequeña empresa de software lo cual me ayudó a prepararme para grandes retos. Ahora trabajo en una gran consultora. <br><br>
                     Me considero un posible puente en equipos de desarrollo y diseño ya que tengo la habilidad de aprender bastante rápido. Me gusta lo dinámico y lo que requiera cierto nivel de exigencia. <br><br>
                     Creo en que gracias a la tecnología podamos ayudar a nuestro planeta, ayudar a nuestros estilos de vida a ser más sanos. Me gusta imaginar un futuro en el que la tecnología sea nuestra amiga.
                 </p>
