I made aboute me section & title style

--- a/index.html
+++ b/index.html
@@ -48,5 +48,13 @@
             <img src="./img/arrow-down.svg" alt="arrow" srcset="">
         </div>
     </section>
+    <div class="wrapper">
+        <div class="about-me" id="about-me">
+            <div class="sub-title">
+                <h2>About me</h2>
+            </div>
+            <p>My name is Joe Mancera. I’m from Colombia and I’m backend developer but i like frontend too. I’m so dedicate and to my work and with 5 years of experience I hope convert in Full stack dev.</p>
+        </div>
+    </div>
 </body>
 </html>
