Was created skill item

--- a/index.html
+++ b/index.html
@@ -56,5 +56,29 @@
             <p>My name is Joe Mancera. I’m from Colombia and I’m backend developer but i like frontend too. I’m so dedicate and to my work and with 5 years of experience I hope convert in Full stack dev.</p>
         </div>
     </div>
+    <div class="wrapper">
+        <div class="skills">
+            <div class="sub-title">
+                <h2>Skills</h2>
+            </div>
+            <div class="skill-item">
+                <div class="skill-title">
+                    <h3>JavaScript</h3>
+                </div>
+                <div class="skill-description">
+                    <p>
+                        The most used language in develop, I can used both in back and in front.
+                    </p>
+                </div>
+            </div>
+            <div class="skill-xp">
+                <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                <span><img width="28px" src="./img/xp-in-act.svg" alt="xp-active"></span>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
