Was created the other skills items

--- a/index.html
+++ b/index.html
@@ -70,13 +70,149 @@
                         The most used language in develop, I can used both in back and in front.
                     </p>
                 </div>
+                <div class="skill-xp">
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp-in-act.svg" alt="xp-active"></span>
+                </div>
             </div>
-            <div class="skill-xp">
-                <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
-                <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
-                <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
-                <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
-                <span><img width="28px" src="./img/xp-in-act.svg" alt="xp-active"></span>
+            <div class="skill-item">
+                <div class="skill-title">
+                    <h3>HTML</h3>
+                </div>
+                <div class="skill-description">
+                    <p>
+                        I used to created websites and web applications for the users interactions.
+                    </p>
+                </div>
+                <div class="skill-xp">
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp-in-act.svg" alt="xp-active"></span>
+                </div>
+            </div>
+            <div class="skill-item">
+                <div class="skill-title">
+                    <h3>CSS</h3>
+                </div>
+                <div class="skill-description">
+                    <p>
+                        I have used to created wonderful websites and web applications.
+                    </p>
+                </div>
+                <div class="skill-xp">
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp-in-act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp-in-act.svg" alt="xp-active"></span>
+                </div>
+            </div>
+            <div class="skill-item">
+                <div class="skill-title">
+                    <h3>C#</h3>
+                </div>
+                <div class="skill-description">
+                    <p>
+                        I used this to build business logic and REST APIs.
+                    </p>
+                </div>
+                <div class="skill-xp">
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp-in-act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp-in-act.svg" alt="xp-active"></span>
+                </div>
+            </div>
+            <div class="skill-item">
+                <div class="skill-title">
+                    <h3>SQL</h3>
+                </div>
+                <div class="skill-description">
+                    <p>
+                        I used this to get info to BI reports in SQL server, Postgres and MySQL.
+                    </p>
+                </div>
+                <div class="skill-xp">
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp-in-act.svg" alt="xp-active"></span>
+                </div>
+            </div>
+            <div class="skill-item">
+                <div class="skill-title">
+                    <h3>GIT</h3>
+                </div>
+                <div class="skill-description">
+                    <p>
+                        I have used this to versioning code and produce a good workflow.
+                    </p>
+                </div>
+                <div class="skill-xp">
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp-in-act.svg" alt="xp-active"></span>
+                </div>
+            </div>
+            <div class="skill-item">
+                <div class="skill-title">
+                    <h3>VSCode</h3>
+                </div>
+                <div class="skill-description">
+                    <p>
+                        I use this app to build everything I can ... including notes.
+                    </p>
+                </div>
+                <div class="skill-xp">
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp-in-act.svg" alt="xp-active"></span>
+                </div>
+            </div>
+            <div class="skill-item">
+                <div class="skill-title">
+                    <h3>AdobeXD</h3>
+                </div>
+                <div class="skill-description">
+                    <p>
+                        I use this app to create my ideas about something that I want to do.
+                    </p>
+                </div>
+                <div class="skill-xp">
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp-in-act.svg" alt="xp-active"></span>
+                </div>
+            </div>
+            <div class="skill-item">
+                <div class="skill-title">
+                    <h3>Figma</h3>
+                </div>
+                <div class="skill-description">
+                    <p>
+                        I use this app to create my ideas about something that I want to do.
+                    </p>
+                </div>
+                <div class="skill-xp">
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp_act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp-in-act.svg" alt="xp-active"></span>
+                    <span><img width="28px" src="./img/xp-in-act.svg" alt="xp-active"></span>
+                </div>
             </div>
         </div>
     </div>
