was created the project section

--- a/index.html
+++ b/index.html
@@ -216,5 +216,46 @@
             </div>
         </div>
     </div>
+    <div class="wrapper">
+        <div class="projects">
+            <div class="sub-title">
+                <h2>Projects</h2>
+            </div>
+            <div class="project-item">
+                <div class="project-title">
+                    <h3>CODI - Ecopetrol</h3>
+                </div>
+                <div class="project-description">
+                    <p>
+                        This web app was created to ecopetrol to realize a digital courier to people outside of company
+                    </p>
+                    <button class="btn btn-secondary">See app</button>
+                </div>
+            </div>
+            <div class="project-item">
+                <div class="project-title">
+                    <h3>Shoping Car - Ci2</h3>
+                </div>
+                <div class="project-description">
+                    <p>
+                        This web app was created to admission test to Ci2 company, but I worked with its partner.
+                    </p>
+                    <button class="btn btn-secondary">See app</button>
+                    <button class="btn btn-primary">See code</button>
+                </div>
+            </div>
+            <div class="project-item">
+                <div class="project-title">
+                    <h3>Demo - Techedge</h3>
+                </div>
+                <div class="project-description">
+                    <p>
+                        This web app was created to use the REST API services that have OpenText ContentServer to externs apps.
+                    </p>
+                    <button class="btn btn-secondary">See app</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
