was created the inspirations items and images

--- a/index.html
+++ b/index.html
@@ -257,5 +257,86 @@
             </div>
         </div>
     </div>
+    <div class="wrapper">
+        <div class="hobbies">
+            <div class="sub-title">
+                <h2>Hobbies</h2>
+            </div>
+            <ul class="hobbies-list">
+                <li>Lerning</li>
+                <li>Lisent to music</li>
+                <li>Photografy</li>
+                <li>See car races</li>
+                <li>Learning</li>
+                <li>Cars video games</li>
+            </ul>
+        </div>
+    </div>
+    <div class="wrapper">
+        <div class="inspirations">
+            <div class="sub-title">
+                <h2>Inspirations</h2>
+            </div>
+            <div class="inspiration-item">
+                <a href="https://www.beek.io" target="_blank">
+                    <img height="50px" src="./img/ins-pamela.png" alt="" srcset="">
+                </a>
+                <div class="inspiration-description">
+                    <div class="inspiration-name">
+                        <h3>Pamela Valdéz</h3>
+                    </div>
+                    <div class="inspiration-do">
+                        <p>CEO & Cofounder of beek</p>
+                    </div>
+                </div>
+            </div>
+            <div class="inspiration-item">
+                <a href="https://www.platzi.com" target="_blank">
+                    <img height="50px" src="./img/ins-freddy.png" alt="" srcset="">
+                </a>
+                <div class="inspiration-description">
+                    <div class="inspiration-name">
+                        <h3>Freddy Vega</h3>
+                    </div>
+                    <div class="inspiration-do">
+                        <p>CEO & Cofounder of platzi</p>
+                    </div>
+                </div>
+            </div>
+            <div class="inspiration-item">
+                <a href="https://www.tatianacalderon.com" target="_blank">
+                    <img height="50px" src="./img/ins-tatiana.png" alt="" srcset="">
+                </a>
+                <div class="inspiration-description">
+                    <div class="inspiration-name">
+                        <h3>Tatiana Calderón</h3>
+                    </div>
+                    <div class="inspiration-do">
+                        <p>Super Formula & WEC LMP2 driver</p>
+                    </div>
+                </div>
+            </div>
+            <div class="inspiration-item">
+                <a href="https://www.beek.io" target="_blank">
+                    <img height="50px" src="./img/ins-robbie.png" alt="" srcset="">
+                </a>
+                <div class="inspiration-description">
+                    <div class="inspiration-name">
+                        <h3>Robbie J Frye</h3>
+                    </div>
+                    <div class="inspiration-do">
+                        <p>Host of The Frye Show podcast</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="wrapper">
+        <div class="contact">
+            <div class="sub-title">
+                <h2>Contact me</h2>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
